--- a/src/components/Chart/chart.css
+++ b/src/components/Chart/chart.css
@@ -1,5 +1,5 @@
 .chart {
-  padding: 1rem;
+  padding: 10px;
   border-radius: 12px;
   text-align: center;
   display: flex;
@@ -7,4 +7,10 @@
   height: 10rem;
   box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
     rgba(17, 17, 26, 0.05) 0px 8px 32px;
+}
+
+@media screen and (max-width:425px) {
+  .chart {
+    padding: 25px 10px;
+  }
 }
